chore(lint): Add linting config and fix up warnings
