# api-docs/openapi.yaml
@@ -99,19 +99,3 @@ paths:
                 properties:
                   message:
                     type: string
-  /greeting/{name}:
-    post:
-      operationId: weather_api.run.post_greeting
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: Successful response
-          content:
-            text/plain:
-              schema:
-                type: string
